# BarbelEngine

./: .clang-format  .editorconfig  .gitignore  CMAKE_BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
Engine/: CMakeLists.txt
Engine/include/: Engine.h  Window.h
Engine/src/: Engine.cpp  Window.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Main.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
